--- a/Weather/View/Base.lproj/Main.storyboard
+++ b/Weather/View/Base.lproj/Main.storyboard
@@ -43,10 +43,10 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="bottom" spacing="6" translatesAutoresizingMaskIntoConstraints="NO" id="Oz0-Id-jKw">
-                                <rect key="frame" x="127" y="72" width="160" height="269"/>
+                                <rect key="frame" x="117" y="72" width="180" height="269"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="nosign" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="Kmr-9y-tBO">
-                                        <rect key="frame" x="0.0" y="0.5" width="160" height="159"/>
+                                        <rect key="frame" x="20" y="0.5" width="160" height="159"/>
                                         <color key="tintColor" name="infoColor"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="160" id="5w3-3J-wio"/>
@@ -54,16 +54,19 @@
                                         </constraints>
                                     </imageView>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="GpC-mF-brX">
-                                        <rect key="frame" x="1.5" y="166" width="158.5" height="76.5"/>
+                                        <rect key="frame" x="10.5" y="166" width="169.5" height="76.5"/>
                                         <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="25" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OQm-uB-C3b">
-                                                <rect key="frame" x="0.0" y="0.0" width="79.5" height="76.5"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="NA" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OQm-uB-C3b">
+                                                <rect key="frame" x="0.0" y="0.0" width="90.5" height="76.5"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="79" id="YwD-zS-bSm"/>
+                                                </constraints>
                                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="64"/>
                                                 <color key="textColor" name="infoColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ºC" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="B6D-Dl-sps">
-                                                <rect key="frame" x="87.5" y="0.0" width="71" height="76.5"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="749" text="ºC" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="B6D-Dl-sps">
+                                                <rect key="frame" x="98.5" y="0.0" width="71" height="76.5"/>
                                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="64"/>
                                                 <color key="textColor" name="infoColor"/>
                                                 <nil key="highlightedColor"/>
@@ -71,7 +74,7 @@
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="6" translatesAutoresizingMaskIntoConstraints="NO" id="ERA-9B-L6m">
-                                        <rect key="frame" x="43" y="248.5" width="117" height="20.5"/>
+                                        <rect key="frame" x="60" y="248.5" width="120" height="20.5"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="feels like" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Wbd-d5-VLs">
                                                 <rect key="frame" x="0.0" y="0.0" width="66" height="20.5"/>
@@ -79,15 +82,15 @@
                                                 <color key="textColor" name="infoColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="23" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KuF-cu-Nkh">
-                                                <rect key="frame" x="72" y="0.0" width="20.5" height="20.5"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="NA" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KuF-cu-Nkh">
+                                                <rect key="frame" x="72" y="0.0" width="23.5" height="20.5"/>
                                                 <color key="tintColor" name="infoColor"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <color key="textColor" name="infoColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ºC" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IYe-7e-lja">
-                                                <rect key="frame" x="98.5" y="0.0" width="18.5" height="20.5"/>
+                                                <rect key="frame" x="101.5" y="0.0" width="18.5" height="20.5"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <color key="textColor" name="infoColor"/>
                                                 <nil key="highlightedColor"/>
@@ -96,7 +99,7 @@
                                     </stackView>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="160" id="5ee-wJ-evB"/>
+                                    <constraint firstAttribute="width" constant="180" id="5ee-wJ-evB"/>
                                 </constraints>
                             </stackView>
                         </subviews>
