--- a/Weather/View/Base.lproj/Main.storyboard
+++ b/Weather/View/Base.lproj/Main.storyboard
@@ -42,11 +42,11 @@
                                 <color key="textColor" red="0.81644080510000006" green="1" blue="0.55596436989999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="bottom" spacing="6" translatesAutoresizingMaskIntoConstraints="NO" id="Oz0-Id-jKw">
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="6" translatesAutoresizingMaskIntoConstraints="NO" id="Oz0-Id-jKw">
                                 <rect key="frame" x="117" y="72" width="180" height="269"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="nosign" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="Kmr-9y-tBO">
-                                        <rect key="frame" x="20" y="0.5" width="160" height="159"/>
+                                        <rect key="frame" x="10" y="0.5" width="160" height="159"/>
                                         <color key="tintColor" name="infoColor"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="160" id="5w3-3J-wio"/>
@@ -54,7 +54,7 @@
                                         </constraints>
                                     </imageView>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="GpC-mF-brX">
-                                        <rect key="frame" x="10.5" y="166" width="169.5" height="76.5"/>
+                                        <rect key="frame" x="5.5" y="166" width="169.5" height="76.5"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="NA" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OQm-uB-C3b">
                                                 <rect key="frame" x="0.0" y="0.0" width="90.5" height="76.5"/>
@@ -74,7 +74,7 @@
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="6" translatesAutoresizingMaskIntoConstraints="NO" id="ERA-9B-L6m">
-                                        <rect key="frame" x="60" y="248.5" width="120" height="20.5"/>
+                                        <rect key="frame" x="30" y="248.5" width="120" height="20.5"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="feels like" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Wbd-d5-VLs">
                                                 <rect key="frame" x="0.0" y="0.0" width="66" height="20.5"/>
